Atualizando o codigo para Java 17